Migrate relevant components to use XtsType in xts_common.proto
PiperOrigin-RevId: 599729922